--- a/Model/data/nlu.yml
+++ b/Model/data/nlu.yml
@@ -17,13 +17,67 @@ nlu:
     - مساء الخير  
     - السلام عليكم
     - ايه الدنيا
-    - ممكن اعمل اوردر من فضلك
     - عندكم ايه يتاكل؟
     - ممكن تعملي طلب؟
-    - عاوز اكل اي حاجة
-    - ممكن تاخدلي طلبية سريعة؟
-    - ينفع اعمل اوردر يا صاحبي
-    - ازيكم وانا عاوز افطر عندكم
+    - ازيكم   
+    - مرحبًا بك في مصر.
+    - اهلًا وسهلًا بحضرتك.
+    -  صباح الخير يا فندم.
+    -  مساء الخير يا فندم.
+    -  ازيك يا حبيبي؟
+    -  عامل ايه يا وحش؟
+    -  ايه الاخبار يا كبير؟
+    -  صباح الفل يا قمر.
+    -  مساء الخير يا سكر.
+    -  اهلًا وسهلًا يا أستاذ.
+    -  مرحبًا يا مدام.
+    -  صباح الخير يا جماعة.
+    -  مساء الخير يا جماعة.
+    -  عامل ايه يا معلم؟
+    -  مساء الخير يا صاحبي.
+    -  صباح الخير يا صديقي
+    -  مساء الورد عليكم
+    -  أهلًا وسهلًا فيكوا
+    -  كل سنة وأنتم طيبين
+    -  مرحبا يا جماعة
+    -  صباح النشاط عليك
+    -  مساء الفرح والسرور
+    -  أزيكم يا أحباب؟
+    -  الله يسلمكم من كل شر
+    -  هلا بيكم في أي وقت
+    -  صباح الفل والياسمين
+    -  مساء السعادة عليكم
+    -  أهلًا وغلا يا أصحاب
+    -  كيف الأحوال يا شباب؟
+    -  مرحبا بيكم في البيت
+    -  السلام عليكم ورحمة الله
+    -  هات الجديد يا غالي
+    -  صباح الطاعة والبركة
+    -  مساء الأمل والفرح
+    -  أزيك يا حبايب؟
+    -  حضرتك أخبارك إيه؟
+    -  يا هلا بيكم في أي وقت
+    -  صباح السعادة والهنا
+    -  ألف مرحبا بكم جميعًا
+    -  مساء الورد والياسمين
+    -  أهلا وسهلا بكم جميعاً
+    -  كيفك يا غالي؟
+    -  الله ينور عليكم
+    -  صباح الأمل والتفاؤل
+    -  أزيكم يا ناس؟
+    -  حبيبي، إزيك إنت؟
+    -  صباح السرور عليك
+    -  مساء الخير والسعادة
+    -  الله يسلمكم ويخليكم
+    -  صباح النور والسرور
+    -  أزيك يا صاحبي؟
+    -  يا ريت تقولولي كيفكم؟
+    -  السلام عليكم ورحمة الله وبركاته
+    -  أهلًا وسهلًا فيكم في أي وقت
+    -  كيف حالكم جميعًا؟
+    -  اللهم بلغنا لحظة اللقاء
+    -  أهلًا بكم في كل حين
+    -  أزيكم يا ناس الخير؟
 
 - intent: goodbye
   examples: |
@@ -37,6 +91,53 @@ nlu:
     - يلا ياد من هنا
     - انا حروح
     - انطلق بقي
+    - مع السلامة يا فندم.
+    -  اشوفك بعدين يا فندم.
+    -  اشوفك بكرة يا فندم.
+    -  اشوفك بعدين يا وحش.
+    -  اشوفك بكرة يا كبير.
+    -  مع السلامة يا شباب. خد بالك من نفسك.
+    -  اشوفك بعدين يا بنات.
+    -  اشوفك بكرة يا جماعة. اتفضلوا تعالوا عندنا.
+    -  اروح وأرجع
+    -  بسألك بكرة
+    -  أنا رايح للبيت
+    -  بشوفك في وقت تاني
+    -  بشوفك لما أشوفك
+    -  بروح وأجيلك
+    -  يا ريت أشوفك قريب
+    -  بدل ما تلخبط، أنا طالع
+    -  هتلاقيني تحت، يلا سلام
+    -  أشوفك في أحسن حال
+    -  يلا أنا في الطريق
+    -  يلا يا حبيبي، بتوفيق
+    -  رايح على البيت، إشوفك لما أشوفك
+    -  هتشوفني قريب، إن شاء الله
+    -  بشوفك في وقتها
+    -  أنا حاسس بالتعب، بس شوفك لما أرجع
+    -  يا سلام، نشوفك لما نشوفك
+    -  رايح لحظة وأرجع
+    -  يا طيب، مع السلامة
+    -  يلا يا راجل، أنا في الطريق
+    -  أروح وأجيلك إن شاء الله
+    -  نلتقي في وقت لاحق
+    -  أنا في حالة إنطلاق
+    -  مع السلامة يا حب
+    -  أنا على وشك أروح
+    -  بتوفيق، سلام
+    -  يلا يا حبيبي، نلتقي بكرة
+    -  أنا رايح لحظة
+    -  أنا في طريقي، سلام
+    -  بشوفك لما أرجع
+    -  بياخد وقت، أنا طالع
+    -  بشوفك في الغد
+    -  بلّاش يا حبيبي، أنا رايح
+    -  يلا مع السلامة يا جميل
+    -  أنا رايح في أمان الله
+    -  يلا يا راجل، بلّاش هنا
+    -  أنا رايح يا جماعة
+    -  إن شاء الله أشوفك لما أرجع
+    -  رايح للبيت، سلامات
 
 - intent: order
   examples: |
