--- a/Model/data/nlu.yml
+++ b/Model/data/nlu.yml
@@ -138,7 +138,247 @@ nlu:
     -  أنا رايح يا جماعة
     -  إن شاء الله أشوفك لما أرجع
     -  رايح للبيت، سلامات
+    
+- intent: menu
+  examples: |
+    - هو أنا ينفع أشوف المينيو؟
+    - ممكن المينيو لو سمحت؟
+    - وريني كده الأكل بتاعكم اللي بيقولوا عليه ده
+    - هو الأكل ده أيه الأحجام اللي موجودة منه
+    - وأيه أخبار الأكل المشطشط عندكم بقى؟
+    - عايز المينيو
+    - بيقولوا الأكل عندكم تحفة عايزة أجرب كده
+    - خلينا نشوف المينيو
+    - عايز أعرف بتعملوا أكل أيه
+    - ممكن أشوف الأكل الي انتوا بتقدموه
+    - عايزة اتفرج على المينيو
+    - كنت عايزة اعرف الأسعار عندكم نظامها أيه؟
+    - يا ريت تقترح عليا لو عايز حاجة تكون مش غالية
+    - في ايه عندكم يتاكل؟
+    - لو سمحت ممكن المينيو؟
+    - هو انتوا ليه ماعندكمش الأكل ده؟
+    - انا بحب الحاجات السبايسي بصراحة
+    - أنا نباتي ياريت تقترح عليا حاجة أطلبها
+    - مش معايا فلوس كتير وعايز أطلب
+    - عايز حاجة سعرها معقول
+    - عايز أكلة يكون سعرها في الحنين منه
+    - هتأكلونا أيه النهارده؟
+    - الأسعار لو سمحت
+    - عايزة أكل بس ماليش في الحلويات خالص
+    - في حاجة عندكم تتشرب؟
+    - بلاش أكلات حارة عندي حساسية
+    - بكام ده؟
+    - انا صايمة ياريت تقترح عليا حاجة صيامي
+    - عايز أكلة صيامي في اللذيذ منه
+    - المينيو من فضلك
+    - وريني الأطباق بتاعتكم كده
+    - أنا أول مرة أجرب المطعم أقترح عليا كده
+    - عايز أحلى طبق عندكم
+    - أيه هي الأطباق المميزة عندكم؟
+    - خلينا نشوف كده الأكل بتاعكم ده بيقول أيه
+    - عايزة أكل شوف لي حاجة على ذوقك
+    - ممكن أطلب أكل بس بالله عليك يكون فري جلوتين
+    - أنا جعان حاجة على مزاجك بقى
+    - سمعت إن أسعاركم مش بطالة
+    - ممكن العروض والأسعار
+    - ممكن تقولي الأسعار عندكم أخبارها أيه؟
+    - صحابي قالوا لي عى المطعم ده وعايزة أجرب كده
+    - ضغطي عالي عايز الأكل ملحه قليل
+    - ياريت بلاش سكريات خالص
+    - يا ترى بتقدموا مأكولات بحرية
+    - يا سلام لو بتقدموا حلويات
+    - عايز أطلب حاجة كده على قد الأيد
+    - أنا زبون جديد أكرموني بقى
+    - مش عارفة هلاقي اللي بدور عليه هنا ولا أيه
+    - الأكلات الحارة أخبارها أيه معاكم؟
+    - يا ريت تطلعوا ذي ما سمعت عنكم
+    - عايزة اكلة بسيطة ومش مكلفة
+    - يا ترى بقى أيه اللي بيميزكم عن باقي المطاعم
+    - مش متأكدة بصراحة عايزة اطلب أيه
+    - ممكن أخد فكرة كده عن الأسعار
+    - أتمنى يكون عندكم أكل صحي
+    - أنا مش بحب الأكل الدسم ياريت تكونوا بتقدموا أكلات منخفضة الدهون
+    - أنا جاية أشوف لو عندكم عروض خاصة على الأكل
+    - عندكم وجبات مخصصة للأطفال؟
+    - بتقدموا وجبات من غير لحوم؟
+    - أنا عايزة أطلب اكل للبيت
+    - يا ترى عاملين وجبات مخصصة وقت الفطار؟
+    - بفكر في حاجة نباتية كدة
+    - أنا عاملة دايت ف عايزة اطلب حاجة مناسبة
+    - عندي مناسبة عايزة أطلب أكل لو سمحت
+    - هو انتوا بتقدموا كل أنواع المأكولات؟
+    - ممكن أعمل أوردر عندي اجتماع
+    - يارب تكونوا بتقدموا مشروبات باردة
+    - لو حد عنده حساسية من أكلات معينة ممكن يطلب؟
+    - عايزة حاجة سبايسي وطعمها حلو
+    - أزيكم الأسعار عندكم عاملة أيه؟
+    - أنصحوني كده بأكلة لذيذة وخفبفة
+    - حد يساعدني اختار يا جماعة
+    - أنا عندي حساسية من كل المأكولات البحرية بلاش منها
+    - الأسعار في المتناول ولا أيه الكلام؟
+    - طيب و ده سعره كام بقى؟
+    - الأكل ده بقى بيجي معاه أيه؟
+    - يا ريت يكون الطبق ده حار
+    - في صوصات بتيجي مع الأطباق؟
+    - بدور على أكلة حلوة من الآخر كده
+    - الأكل النباتي عندكم حلو؟
+    - الكميات بتكون قد أيه؟
+    - قول لي كده عندكم منيو للأطفال؟
+    - يا سلام نفسي رايحة على الأكل البيتي
+    - بفكر النهارده في الوجبات السريعة
+    - هجرب حاجة من عندكم بقى وخلاص
+    - ينفع أطلب أكل لأطفالي الصغيرين
+    - انا سناني بايظة عايزة بقى حاجة ينفع تتاكل
+    - يا ترى الأسعار مناسبة ولا غالية أوي بقى؟
+    - مش عارفة لسه بصراحة بفكر أطلب ايه
+    - عايز أطباق طعمها أحلى من اللي جربتها بره
+    - مفيش حاجة تكون أرخص شوية من كده؟
+    - عايزة أطلب من عندكم لو ينفع
+    - الأكلات الحارة عندكم حلوة؟
+    - في أطباق سبايسي في المينيو
+    - المينيو عندكم بقى فيه أسماك؟
+    - يصراحة أي حاجة فيها لحوم مش هاكلها
+    - لو انت مكاني هتطلب أكل أيه؟
+    - أنا الزبون بتاعكم أعملوا معايا الواجب بقى
+    - وريني المينيو كده
+    - أشوف المينيو الأول بس
+    - عايزة أشوف الأكل بتاعكم قبل ما أطلب
+    - ليه مش بتقدموا أسماك؟
+    - عايز أشوف مينيو الحلويات كده
+    - أيه أحسن الأطباق عندكم؟
+    - ترشحلي أيه من المينيو بعد أذنك؟
+    - عايزة أطلب حاجة مشطشطة
+    - ليه مفيش عندكم حلويات؟
+    - أيه اسعار السندوتشات هنا؟
+    - لو هطلب أحجام أكبر ده هيكلفني قد أيه؟
+    - عندكم أكل أيه النهارده؟
+    - ليه مش بتقدموا أحجام متوسطة ؟
+    - عايز أشرب حاجة لو سمحت
+    - أنا جعان وريني الأكل بتاعكم كده
+    - نفسي في حاجة حلوة أكلها
+    - عندكم أيه حلو؟
+    - سلام عليكم عايزين ناكل
+    - في أيه طيب يتشرب؟
+    - هتأكلونا أيه بقى
+    - لو أنا نباتية تقترح عليا أيه؟
+    - في أكل صيامي أيه حلو؟
+    - عايزة أكل بس مش عايزة سكر خالص
+    - لو سمحت عايزة أشوف الأكل بتاعكم
+    - في أحجام اصغر من الساندويتش ده؟
+    - ياريت توريني المينيو بتاعكم
+    - أيه بقى الأطباق اللي بتميزكم؟
+    - عايز أعرف أيه أحسن حاجة عندكم؟
+    - هو أنتوا ليه مش بتقدموا صوصات مع الأكل
+    - الساندويتش ده مش بيجي معاه صوص؟
+    - أيه الإضافات اللي بتيجي مع الأكل ده
+    - الطبق ده بينزل معاه ايه؟
+    - الأكلة دي المفروض بينزل معاها صوص
+    - عايز أشوف أحلى حاجة عندكم؟
+    - هي أيه الأطباق اللي انتوا مشهورين بيها؟
 
+- intent: feedback
+  examples: |
+    - الأكل تحفة بجد
+    - الأكل بتاعكم طعمه حلو أوي
+    - بصراحة أحلى أكل أكلته في حياتي
+    - الأكل ماعجبنيش خالص
+    - لأ بصراحة حاجة عسل جدا يعني
+    - أيه القرف ده طيب
+    - الأكل كان لذيذ أوي أوي
+    - والله يعني مش بطال
+    - الأكل وصل بارد جدا
+    - أسوأ أكل دوقته في حياتي
+    - أنا عمري ما هطلب تاني من عندكم
+    - الأكل عجبني بشكل
+    - من غير زعل يعني الأكل طعمه يقرف
+    - ده أيه اللذاذة دي بس
+    - لأ والله تسلم أيديكم الأكل كان جميل أوي
+    - دي أول وآخر مرة أطلب من عندكم
+    - الأكل مش ذي ما كنت متوقع خالص
+    - أنا بصراحة مارشحش المطعم ده لحد
+    - يا جماعة أطلبوا من المطعم ده على ضمانتي
+    - طعم الأكل عادي جدا يعني مش مستاهل كل الضجة اللي معمولة عليه دي
+    - مفيش أي حاجة عجبتني في كل الأكل اللي طلبته
+    - لأ بجد الاكل عندكم طعمه حاجة استغفر الله العظيم بحد
+    - الأكل طعمه خطير والخدمة أكتر من ممتازة
+    - والله الأكل طعمه معفن اللي بعمله في البيت أحلى مليون مرة
+    - أنا أول مرة أشكر في مطعم بالطريقة دي بجد
+    - الشاورما كانت لذيذة جدا بس أنا كنت طالب معاها تومية وماجتش
+    - خدمة التوصيل مش أحسن حاجة
+    - الأكل بصراحة ماطلعش قد التوقعات
+    - أنا مش هطلب غير من عندكم بعد كده
+    - المشويات عندكم حلوة فعلا 
+    - انا هخلي كل صحابي يطلبوا من المطعم ده
+    - أحلى أكل دوقته في حياتي حقيقي
+    - كانت تجربة هايلة فعلا
+    - السي فود عندكم طازة ولذيذ أوي
+    - الخدمة كانت رائعة أكيد هطلب من عندكم مرة تانية
+    - السوشي هديله خمس نجوم بجد
+    - العروض كانت جميلة والنكهات كلها تحفة
+    - أنا برشح المطعم ده لكل محبين السوشي
+    - أنا فطرت من عندكم وجودة الأكل فاجأتني فعلا
+    - أحسن مطعم جربته في حياتي
+    - تجربة مش هنساها طول عمري
+    - الأكل كان حلو اوي بس الخدمة كانت بطيئة جدا
+    - خيبتوا أملي بصراحة
+    - الأكل وحش وحش فعلا
+    - الطبق الرئيسي ماكانش قد التوقعات بصراحة
+    - لأ الأكل عجبني أوي فعلا
+    - الأكل اللي طلبته كله ماعجبنيش
+    - الأكل مش قد قده مانصحش بيه
+    - أنتوا الأكل بتاعكم مش طازة خالص
+    - أكلكم جميل وأسعاركم حلوة فعلا
+    - أنا برشح المطعم ده لأي حد عايز يطلب أكل
+    - السمك كان طازة ولذيذ أوي بصراحة
+    - السلطات ماجتش مع الأكل
+    - الفراخ ماكانتش مستوية كويس
+    - المشويات بتاعتكم محروقة تقريبا
+    - محدش يشتري من هنا يا جماعة
+    - الأسعار غالية أوي على الفاضي والأسعار مش قد كده
+    - لأ الأكل جامد تسلم أيديكم
+    - حلو بس لو تنزلوا الأسعار شوية
+    - السي فود عندكم غالي أوي عللى أيه يعني
+    - الاكل كان جميل وجه بسرعة أوي
+    - خدمة التوصيل مذهلة متأخرتوش خالص
+    - لأ الأكل بتاعكم نضيف أوي بأمانة
+    - أجمد مطعم سمك شفته في حياتي
+    - الأكل بصراحة يستاهل تمنه فعلا
+    - تجربة سيئة مش ممكن أكررها
+    - حلو بس لو تكتروا السلطات والطحينة شوية
+    - اللحمة مش مطبوخة حلو
+    - السوشي بتاعكم طعمه بشع
+    - تجربة لذيذة
+    - حلو مش وحش
+    - أنا مش هاكل حواوشي غير من عندكم بعد كده
+    - أنا كنت طالبة اللحمة مستوية كويس وأنتوا جبتوها نص سوى
+    - ياريت كل المطاعم شبهكم كده
+    - الأكل اتاخر أوي ووصل بارد
+    - الأكل كان ملحه زيادة أوي
+    - والله اديلكم خمس نجوم
+    - مشكلتي مع المكرونة ماكانش فيها ملح
+    - الكنافة سكرها زيادة فعلا
+    - البرجر حجمه أصغر من اللي في المينيو
+    - يا ريت تخلوا عندكم مصداقية وتقولوا الأسعار الحقيقية
+    - لأ بلاش رأيي مش هيعجبكم
+    - الأكل جه سخن وجميل
+    - البيتزا كانت أطرافها ناشفة جدا
+    - غليتوا الاسعار أوي منكم لله
+    - لأ الأكل فعلا فظيع ازاي حلو كده
+    - يا ريت تفضلوا على نفس المستوى ده
+    - ما شاء الله أجود الأكلات وبأحسن الأسعار
+    - الأكل وصل بعدها بساعتين وأنا ساكن جنبكم يعني
+    - قللوا السكر شوية في الحلويات
+    - ياريت تهتموا بالاكسترا اللي مع الأكل شوية
+    - الأكل عجبني أوي بس التوصيل بطيء
+    - المكرونة خطيييرة
+    - ياريت تعملوا فروع أكتر في إسكندرية
+    - الرز في المحشي مش مستوي حلو
+    - أنا طالب ساندويتش واحد وواصل لي متأخر أوي
+    - أنا مت من الجوع عقبال ما الأكل وصل
+    - الخدمة كويسة بس الأكل أقل من العادي بصراحة
+    - الأكل بتاعكم مايستاهلش كل الفلوس دي بجد
+    - ياريت تهتموا بخدمة التوصي شوية أنا استنيت كتير جدا
+    
 - intent: order
   examples: |
     - انا عايز اطلب
