--- a/Model/data/rules.yml
+++ b/Model/data/rules.yml
@@ -17,5 +17,11 @@ rules:
   - slot_was_set:
     - requested_slot: null
   - action: utter_submit
-  - action: foodslots
   - action: utter_goodbye
+
+- rule: Receive_feedback
+  steps:
+  - intent: feedback
+  - action : utter_feedback
+  - active_loop: null
+  - action: foodslots
