add new features ex. feedback,menu and reduce connection latency

--- a/Model/data/nlu.yml
+++ b/Model/data/nlu.yml
@@ -157,6 +157,9 @@ nlu:
     - في ايه عندكم يتاكل؟
     - لو سمحت ممكن المينيو؟
     - هو انتوا ليه ماعندكمش الأكل ده؟
+    - لا عاوز اطلب حاجات تانية بس ممكن توريني المينيو
+    - عايزة أشوف المينيو بتاعكم
+    - ممكن المينيو بتاعكم؟
     - انا بحب الحاجات السبايسي بصراحة
     - أنا نباتي ياريت تقترح عليا حاجة أطلبها
     - مش معايا فلوس كتير وعايز أطلب
@@ -347,6 +350,8 @@ nlu:
     - حلو بس لو تكتروا السلطات والطحينة شوية
     - اللحمة مش مطبوخة حلو
     - السوشي بتاعكم طعمه بشع
+    - حاجة بنت كلب
+    - حاجة بنت وسخة
     - تجربة لذيذة
     - حلو مش وحش
     - أنا مش هاكل حواوشي غير من عندكم بعد كده
@@ -378,6 +383,9 @@ nlu:
     - الخدمة كويسة بس الأكل أقل من العادي بصراحة
     - الأكل بتاعكم مايستاهلش كل الفلوس دي بجد
     - ياريت تهتموا بخدمة التوصي شوية أنا استنيت كتير جدا
+    - ازاي معندكمش احجام تانية
+    - الاكل خرة بصراحة
+   
     
 - intent: order
   examples: |
