feedback edit,make all extras general , recommendation demo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .vscode
 node_modules/
 /RestaurantTest/
+Model/.rasa/
+Model/Loaded Models/arz.wiki.bpe.vs100000.d300.w2v.bin
+Model/Loaded Models/arz.wiki.bpe.vs100000.model
+Model/actions/__pycache__/
+Model/NluComponents/__pycache__/
+
