--- a/Model/domain.yml
+++ b/Model/domain.yml
@@ -73,8 +73,6 @@ responses:
   utter_food_slots:
   - text: "action_custom_utterance"
 
- 
-
   utter_finalise_order:
   - text: "لو تحب تطلب حاجة تانية ممكن تتفضل لو خلصت الاوردر ممكن تقولي رقم تليفون اتواصل بيه معاك"
   - text: "تحب تطلب حاجة تانية يا صاحبي؟ ممكن تتفضل لو الاوردر تمام تقولي رقم تليفون اتواصل بيه معاك"
@@ -97,6 +95,7 @@ actions:
   - utter_finalise_order
   - utter_signal
   - foodslots
+  - send_recommendation
   - send_feedback  
 forms:
   food_form:
